<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="fill_parent" android:orientation="vertical" android:layout_width="fill_parent">
<TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center_horizontal" android:background="#dbecf5" android:text="@string/game_store_title" android:textSize="20dip"></TextView><FrameLayout android:id="@+id/FrameLayout01" android:layout_height="fill_parent" android:layout_width="fill_parent"><RelativeLayout android:id="@+id/RelativeLayout01" android:layout_height="fill_parent" android:layout_width="fill_parent"><Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_alignParentBottom="true" android:text="@string/download" android:id="@+id/download"></Button>
<LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/statusbar" android:layout_above="@+id/download" android:orientation="vertical" android:layout_marginLeft="5dip" android:layout_marginRight="5dip"><TextView android:text="@+id/TextView04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/status"></TextView>
<ProgressBar android:layout_width="fill_parent" android:indeterminate="true" style="?android:attr/progressBarStyleHorizontal" android:id="@+id/progress" android:layout_height="25dip"></ProgressBar>
</LinearLayout><LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_marginTop="20dip" android:layout_marginLeft="10dip" android:id="@+id/LinearLayout01"><ImageView android:layout_height="60dip" android:layout_width="60dip" android:scaleType="fitXY" android:id="@+id/icon" android:layout_marginRight="5dip"></ImageView>
<TextView android:text="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/name" android:textSize="20dip" android:layout_gravity="center_vertical"></TextView>
</LinearLayout>

<TableLayout android:id="@+id/TableLayout01" android:layout_height="wrap_content" android:layout_below="@id/LinearLayout01" android:layout_marginLeft="10dip" android:layout_marginTop="20dip" android:layout_width="fill_parent"><TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content" android:layout_height="wrap_content">
<TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/file_size" android:layout_marginRight="20dip"></TextView>
<TextView android:text="@+id/TextView04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/size"></TextView>
</TableRow><TextView android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/description"></TextView><TextView android:text="@+id/TextView05" android:layout_height="wrap_content" android:id="@+id/description" android:layout_width="fill_parent"></TextView>
</TableLayout><LinearLayout android:layout_height="fill_parent" android:layout_width="fill_parent" android:background="#FFFFFFFF" android:gravity="center_horizontal|center_vertical" android:id="@+id/loading" android:visibility="visible"><ProgressBar android:id="@+id/ProgressBar01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dip"></ProgressBar>
<TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/now_loading" android:textSize="24dip"></TextView>


</LinearLayout>

</RelativeLayout></FrameLayout>



</LinearLayout>
